gitops/clusters/de/hetzner/cluster/apps/argocd/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: gateway
      namespace: envoy-gateway-system
      sectionName: tls
  hostnames:
    - "argocd.internal.willpxxr.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
